apps/infra/longhorn-storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-longhorn-storage
  labels:
    pod-security.kubernetes.io/enforce: privileged
